--- a/src/jacobreid/view_controller/Main.fxml
+++ b/src/jacobreid/view_controller/Main.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="Main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jacobreid.view_controller.MainController">
+<BorderPane fx:id="Main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jacobreid.view_controller.MainController">
    <top>
       <Label text="Inventory Management System" BorderPane.alignment="TOP_LEFT">
          <BorderPane.margin>
@@ -70,7 +70,7 @@
                            <children>
                               <Label layoutX="14.0" layoutY="15.0" text="Products" />
                               <TextField fx:id="productsTextField" layoutX="84.0" layoutY="10.0" prefHeight="27.0" prefWidth="180.0" />
-                              <Button fx:id="searchProductsButton" layoutX="283.0" layoutY="10.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleProductsSearch" text="Search" />
+                              <Button fx:id="searchProductsButton" layoutX="283.0" layoutY="10.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleSearchProducts" text="Search" />
                            </children>
                         </AnchorPane>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -87,7 +87,7 @@
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="addProductButton" layoutX="14.0" layoutY="9.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleProductAdd" text="Add" />
+                              <Button fx:id="addProductButton" layoutX="14.0" layoutY="9.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleAddProduct" text="Add" />
                               <Button fx:id="modifyProductButton" layoutX="153.0" layoutY="8.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleModifyProduct" text="Modify" />
                               <Button fx:id="deleteProductButton" layoutX="283.0" layoutY="8.0" minWidth="100.0" mnemonicParsing="false" text="Delete" />
                            </children>
