--- a/src/inventorymanagement/view_controller/Part.fxml
+++ b/src/inventorymanagement/view_controller/Part.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="222.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jacobreid.view_controller.PartController">
+<AnchorPane id="AnchorPane" prefHeight="222.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="inventorymanagement.view_controller.PartController">
    <children>
       <Label fx:id="partLabel" layoutX="14.0" layoutY="14.0" />
       <RadioButton fx:id="inHouseRadioButton" layoutX="103.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleInHouse" text="In-House">
