--- a/src/inventorymanagement/view_controller/Product.fxml
+++ b/src/inventorymanagement/view_controller/Product.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="456.0" prefWidth="728.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jacobreid.view_controller.ProductController">
+<AnchorPane id="AnchorPane" prefHeight="456.0" prefWidth="728.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="inventorymanagement.view_controller.ProductController">
    <children>
       <VBox layoutX="307.0" layoutY="1.0" spacing="17.0">
          <children>
